--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,11 @@
     transform: rotate(360deg);
   }
 }
+
+.roomList {
+  float: left;
+  background-color: rgb(190, 190, 190);
+  width: 30%;
+  min-width: 200px;
+  height: 1200px;
+}
